prevented overflow x

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,10 @@
     margin-bottom: 0px !important;
 }
 
+body{
+    overflow-x: hidden;
+}
+
 .example-box-2 {
     background-image: linear-gradient(to top right, white,#01a9eb);
     width: 100%;
